// Vitest Snapshot v1

exports[`Radio Component > props.checked is equal to true 1`] = `
<div>
  <label
    class="t-radio t-is-checked"
  >
    <input
      checked=""
      class="t-radio__former"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
  </label>
</div>
`;

exports[`Radio Component > props.checked works fine 1`] = `
<div>
  <label
    class="t-radio t-is-checked"
  >
    <input
      checked=""
      class="t-radio__former"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
  </label>
</div>
`;

exports[`Radio Component > props.checked works fine 2`] = `
<div>
  <label
    class="t-radio"
  >
    <input
      class="t-radio__former"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
  </label>
</div>
`;

exports[`Radio Component > props.children works fine 1`] = `
<div>
  <label
    class="t-radio"
  >
    <input
      class="t-radio__former"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </label>
</div>
`;

exports[`Radio Component > props.disabled works fine 1`] = `
<div>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      disabled=""
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      Text
    </span>
  </label>
</div>
`;

exports[`Radio Component > props.disabled works fine 2`] = `
<div>
  <label
    class="t-radio"
  >
    <input
      class="t-radio__former"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      Text
    </span>
  </label>
</div>
`;

exports[`RadioGroup Component > props.disabled is equal true 1`] = `
<div>
  <div
    class="t-radio-group t-size-m t-radio-group__outline"
  >
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="1"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio1
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="2"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio2
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="3"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        <span
          class="custom-node"
        >
          Radio3
        </span>
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="4"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio4
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioGroup Component > props.disabled is equal true 2`] = `
<div>
  <div
    class="t-radio-group t-size-m t-radio-group__outline"
  >
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="1"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio1
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="2"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio2
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="3"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio3
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        type="radio"
        value="4"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio4
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioGroup Component > props.name is equal to 'custom-radio-name' 1`] = `
<div>
  <div
    class="t-radio-group t-size-m t-radio-group__outline"
  >
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name="custom-radio-name"
        type="radio"
        value="1"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio1
      </span>
    </label>
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name="custom-radio-name"
        type="radio"
        value="2"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio2
      </span>
    </label>
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name="custom-radio-name"
        type="radio"
        value="3"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        <span
          class="custom-node"
        >
          Radio3
        </span>
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        name="custom-radio-name"
        type="radio"
        value="4"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio4
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioGroup Component > props.name is equal to 'custom-radio-name' 2`] = `
<div>
  <div
    class="t-radio-group t-size-m t-radio-group__outline"
  >
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name="custom-radio-name"
        type="radio"
        value="1"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio1
      </span>
    </label>
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name="custom-radio-name"
        type="radio"
        value="2"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio2
      </span>
    </label>
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name="custom-radio-name"
        type="radio"
        value="3"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio3
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        name="custom-radio-name"
        type="radio"
        value="4"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        Radio4
      </span>
    </label>
  </div>
</div>
`;
